# first_prototype

./: README.md  ReadMe  js.txt  or_q.txt  pos.txt  readMeArduino
camera_data/: 2020-10-16-11-42-17.bag  2020-10-16-11-46-29.bag  2020-10-16-13-39-25.bag  2020-10-16-13-42-19.bag  2020-10-16-13-45-19.bag  2020-10-16-13-51-48.bag  2020-10-16-14-06-15.bag  2020-10-16-14-07-13.bag  2020-10-16-14-11-40.bag  2020-10-16-14-15-18.bag  2020-10-16-14-18-01.bag  2020-10-16-14-19-23.bag  2020-10-16-14-22-54.bag  2020-10-16-14-25-11.bag  2020-10-16-14-28-50.bag  2020-10-16-14-35-44.bag  2020-10-16-14-53-46.bag  2020-10-16-14-56-46.bag  2020-10-16-14-59-32.bag  2020-10-16-14-59-56.bag  2020-10-16-15-03-55.bag  2020-10-16-15-04-23.bag  2020-10-16-15-08-33.bag  2020-10-16-15-13-42.bag  2020-10-16-15-26-39.bag  2020-10-16-15-41-11.bag  2020-10-16-15-41-28.bag  2020-10-16-15-47-12.bag  2020-10-16-15-47-56.bag  2020-10-16-15-55-39.bag  2020-10-16-16-01-38.bag  2020-10-16-16-03-00.bag  test1.txt  test1_10.txt  test1_2.txt  test1_3.txt  test1_4.txt  test1_5.txt  test1_6.txt  test1_7.txt  (+20 more)
camera_tracktests/: 10_16_14_35_44.txt  10_16_15_13_42.txt  10_16_15_26_39.txt  calibration_plot.py  csrt.py  csrt_10_23_14_05_41.txt  csrt_10_23_14_16_12.txt  csrt_10_23_14_19_55.txt  csrt_10_23_14_23_07.txt  csrt_10_23_14_27_23.txt  csrt_10_23_14_37_30.txt  csrt_10_23_14_40_25.txt  csrt_10_23_14_48_16.txt  csrt_10_23_14_53_29.txt  kcf.py  kcf_10_23_17_22_44.txt  kcf_10_23_17_24_40.txt  kcf_10_23_17_26_12.txt  kcf_10_23_17_28_28.txt  kcf_10_23_17_29_43.txt  kcf_10_23_17_32_25.txt  kcf_10_23_17_33_26.txt  kcf_10_23_17_35_58.txt  medianflow.py  medianflow_10_23_15_05_56.txt  medianflow_10_23_15_11_21.txt  medianflow_10_23_15_16_33.txt  medianflow_10_23_15_18_51.txt  medianflow_10_23_16_40_30.txt  medianflow_10_23_16_41_49.txt  medianflow_10_23_16_45_30.txt  medianflow_10_23_16_47_02.txt  medianflow_10_23_16_49_16.txt  mosse.py  mosse_10_23_16_51_37.txt  mosse_10_23_16_53_27.txt  mosse_10_23_16_57_19.txt  mosse_10_23_16_59_55.txt  mosse_10_23_17_02_53.txt  mosse_10_23_17_09_05.txt  (+5 more)
code/: affineTransform.py  affineTransformsvd.py  auto_ab.py  hist_image.py  hsv_realtime.py  iter2_plot.py  match_hist.py  realsene_try1.py  save_video.py  sort.py  stream.py  video.py  write2file.py
comparison_track/: 2020-10-23-14-05-41.bag  2020-10-23-14-15-15.bag  2020-10-23-14-16-12.bag  2020-10-23-14-19-55.bag  2020-10-23-14-23-07.bag  2020-10-23-14-27-01.bag  2020-10-23-14-27-23.bag  2020-10-23-14-36-09.bag  2020-10-23-14-37-30.bag  2020-10-23-14-40-25.bag  2020-10-23-14-48-16.bag  2020-10-23-14-53-29.bag  2020-10-23-15-05-56.bag  2020-10-23-15-07-57.bag  2020-10-23-15-11-21.bag  2020-10-23-15-16-12.bag  2020-10-23-15-16-33.bag  2020-10-23-15-18-51.bag  2020-10-23-16-40-30.bag  2020-10-23-16-41-49.bag  2020-10-23-16-45-30.bag  2020-10-23-16-46-43.bag  2020-10-23-16-47-02.bag  2020-10-23-16-49-16.bag  2020-10-23-16-51-37.bag  2020-10-23-16-53-11.bag  2020-10-23-16-53-27.bag  2020-10-23-16-57-19.bag  2020-10-23-16-59-55.bag  2020-10-23-17-02-17.bag  2020-10-23-17-02-53.bag  2020-10-23-17-09-05.bag  2020-10-23-17-13-31.bag  2020-10-23-17-16-02.bag  2020-10-23-17-18-53.bag  2020-10-23-17-22-44.bag  2020-10-23-17-24-16.bag  2020-10-23-17-24-40.bag  2020-10-23-17-26-12.bag  2020-10-23-17-28-11.bag  (+12 more)
data/: model1.py  test1.txt  test2.txt  test2_2.txt  test2_2_it1.txt  test2_2_it2.txt  test2_2_it3.txt  test2_3.txt  test2_3_it1.txt  (+4 more)
robot_test_gazebo/: CMakeLists.txt  package.xml
robot_test_gazebo/launch/: robot_gazebo_control.launch  robot_test_gazebo.launch  robot_test_world.launch
(+199 files in other folders)
